--- a/config/sidekiq_queues.yml
+++ b/config/sidekiq_queues.yml
@@ -361,6 +361,8 @@
   - 1
 - - projects_process_sync_events
   - 1
+- - projects_record_target_platforms
+  - 1
 - - projects_refresh_build_artifacts_size_statistics
   - 1
 - - projects_schedule_bulk_repository_shard_moves
