--- a/spec/requests/api/project_attributes.yml
+++ b/spec/requests/api/project_attributes.yml
@@ -148,6 +148,7 @@ project_setting:
     - updated_at
     - cve_id_request_enabled
     - mr_default_target_self
+    - target_platforms
 
 build_service_desk_setting: # service_desk_setting
   unexposed_attributes:
