--- a/lib/support/systemd/gitlab-sidekiq.service
+++ b/lib/support/systemd/gitlab-sidekiq.service
@@ -6,7 +6,7 @@ After=network.target
 JoinsNamespaceOf=gitlab-puma.service
 
 [Service]
-Type=simple
+Type=notify
 User=git
 WorkingDirectory=/home/git/gitlab
 Environment=RAILS_ENV=production
@@ -17,6 +17,7 @@ Restart=on-failure
 RestartSec=1
 SyslogIdentifier=gitlab-sidekiq
 Slice=gitlab.slice
+WatchdogSec=10
 
 [Install]
 WantedBy=gitlab.target
