--- a/data/removals/15_0/15-0-omniauth-kerberos-gem.yml
+++ b/data/removals/15_0/15-0-omniauth-kerberos-gem.yml
@@ -6,7 +6,12 @@
   breaking_change: true  # Change to true if this removal is a breaking change.
   reporter: hsutor  # GitLab username of the person reporting the removal
   body: |  # Do not modify this line, instead modify the lines below.
-    Omniauth-kerberos is no longer supported. This gem has not been maintained and has very little usage and therefore, we removed support for this authentication method and recommend using [spengo](https://en.wikipedia.org/wiki/SPNEGO) instead. You can follow the [upgrade instructions](https://docs.gitlab.com/ee/integration/kerberos.html#upgrading-from-password-based-to-ticket-based-kerberos-sign-ins) to upgrade from the removed integration to the new supported one. Note - We are not removing Kerberos SPNEGO integration, just the old password-based Kerberos.
+    The omniauth-kerberos gem is no longer supported. This gem has not been maintained and has very little usage. Therefore, we
+    removed support for this authentication method and recommend using [SPEGNO](https://en.wikipedia.org/wiki/SPNEGO) instead. You can
+    follow the [upgrade instructions](https://docs.gitlab.com/ee/integration/kerberos.html#upgrading-from-password-based-to-ticket-based-kerberos-sign-ins)
+    to upgrade from the removed integration to the new supported one.
+
+    Note: We are not removing Kerberos SPNEGO integration. We are removing the old password-based Kerberos.
 # The following items are not published on the docs page, but may be used in the future.
   stage:  # (optional - may be required in the future) String value of the stage that the feature was created in. e.g., Growth
   tiers:  # (optional - may be required in the future) An array of tiers that the feature is available in currently.  e.g., [Free, Silver, Gold, Core, Premium, Ultimate]
