--- a/ee/app/workers/all_queues.yml
+++ b/ee/app/workers/all_queues.yml
@@ -57,6 +57,15 @@
   :weight: 1
   :idempotent: true
   :tags: []
+- :name: cronjob:analytics_cycle_analytics_reaggregation
+  :worker_name: Analytics::CycleAnalytics::ReaggregationWorker
+  :feature_category: :value_stream_management
+  :has_external_dependencies:
+  :urgency: :low
+  :resource_boundary: :unknown
+  :weight: 1
+  :idempotent: true
+  :tags: []
 - :name: cronjob:analytics_devops_adoption_create_all_snapshots
   :worker_name: Analytics::DevopsAdoption::CreateAllSnapshotsWorker
   :feature_category: :devops_reports
