--- a/lib/gitlab/ci/templates/Jobs/Secret-Detection.gitlab-ci.yml
+++ b/lib/gitlab/ci/templates/Jobs/Secret-Detection.gitlab-ci.yml
@@ -31,14 +31,7 @@ secret_detection:
   script:
     - if [ -n "$CI_COMMIT_TAG" ]; then echo "Skipping Secret Detection for tags. No code changes have occurred."; exit 0; fi
     # Historic scan
-    - |
-      if [ "$SECRET_DETECTION_HISTORIC_SCAN" == "true" ]
-      then
-        echo "historic scan"
-        git fetch --unshallow origin $CI_COMMIT_REF_NAME
-        /analyzer run
-        exit
-      fi
+    - if [ "$SECRET_DETECTION_HISTORIC_SCAN" == "true" ]; then echo "Running Secret Detection Historic Scan"; /analyzer run; exit; fi
     # Default branch scan
     - if [ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]; then echo "Running Secret Detection on default branch."; /analyzer run; exit; fi
     # Push event
