Update invalid feature categories

--- a/db/docs/terraform_states.yml
+++ b/db/docs/terraform_states.yml
@@ -3,5 +3,5 @@ table_name: terraform_states
 classes:
 - Terraform::State
 feature_categories: 
-- package_registry
+- infrastructure_as_code
 description: 
