--- a/db/docs/issue_customer_relations_contacts.yml
+++ b/db/docs/issue_customer_relations_contacts.yml
@@ -3,5 +3,5 @@ table_name: issue_customer_relations_contacts
 classes:
 - CustomerRelations::IssueContact
 feature_categories:
-  - 
+  - purchase
 description: 
