--- a/db/docs/terraform_state_versions.yml
+++ b/db/docs/terraform_state_versions.yml
@@ -3,5 +3,5 @@ table_name: terraform_state_versions
 classes:
 - Terraform::StateVersion
 feature_categories: 
-- package_registry
+- infrastructure_as_code
 description: 
