Fix unresolved name due to cyclic definition
This problem is seen with 1.13.11 of the graphql gem

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -135,6 +135,7 @@ Naming/FileName:
     - 'qa/qa/specs/**/*'
     - 'qa/tasks/**/*.rake'
     - '**/*.ru'
+    - 'app/graphql/types/issue_connection.rb'
 
   IgnoreExecutableScripts: true
   AllowedAcronyms:
