Track blocking epics added on usage ping
Record blocking epic added on usage ping
and use RedisHLL for data aggregation.

Changelog: added
EE: true

--- a/ee/config/metrics/counts_28d/20210318183733_epics_usage_total_unique_counts_monthly.yml
+++ b/ee/config/metrics/counts_28d/20210318183733_epics_usage_total_unique_counts_monthly.yml
@@ -46,6 +46,7 @@ options:
     - g_project_management_users_epic_issue_added_from_epic
     - g_project_management_epic_related_added
     - g_project_management_epic_related_removed
+    - g_project_management_epic_blocking_added
 distribution:
 - ee
 tier:
