--- a/ee/config/metrics/counts_7d/20210318183220_epics_usage_total_unique_counts_weekly.yml
+++ b/ee/config/metrics/counts_7d/20210318183220_epics_usage_total_unique_counts_weekly.yml
@@ -46,6 +46,7 @@ options:
     - g_project_management_users_epic_issue_added_from_epic
     - g_project_management_epic_related_added
     - g_project_management_epic_related_removed
+    - g_project_management_epic_blocking_added
 distribution:
 - ee
 tier:
