Add new CI/CD template for Liquibase
The liquibase CI/CD template  contain common usage patterns
and best practices when running database changes with Liquibase.

Changelog: added

--- a/config/metrics/counts_28d/20210216184559_ci_templates_total_unique_counts_monthly.yml
+++ b/config/metrics/counts_28d/20210216184559_ci_templates_total_unique_counts_monthly.yml
@@ -167,6 +167,7 @@ options:
   - p_ci_templates_implicit_security_cluster_image_scanning
   - p_ci_templates_kaniko
   - p_ci_templates_qualys_iac_security
+  - p_ci_templates_database_liquibase
 distribution:
 - ce
 - ee
