--- a/.gitlab/ci/rules.gitlab-ci.yml
+++ b/.gitlab/ci/rules.gitlab-ci.yml
@@ -1637,6 +1637,10 @@
     - <<: *if-merge-request
       changes: *danger-patterns
 
+.review:rules:reviewers-recommender:
+  rules:
+    - <<: *if-merge-request
+
 ###############
 # Setup rules #
 ###############
