Track blocking epics removed on usage data
Record blocking epic removed on usage ping
and use RedisHLL for data aggregation.

Changelog: added
EE: true

--- a/ee/config/metrics/counts_28d/20210318183733_epics_usage_total_unique_counts_monthly.yml
+++ b/ee/config/metrics/counts_28d/20210318183733_epics_usage_total_unique_counts_monthly.yml
@@ -47,6 +47,7 @@ options:
     - g_project_management_epic_related_added
     - g_project_management_epic_related_removed
     - g_project_management_epic_blocking_added
+    - g_project_management_epic_blocking_removed
 distribution:
 - ee
 tier:
