--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -329,17 +329,12 @@ GitlabSecurity/PublicSend:
 
 Database/MultipleDatabases:
   Enabled: true
-  Include:
-    - 'app/**/*.rb'
-    - 'ee/app/**/*.rb'
-    - 'lib/**/*.rb'
-    - 'ee/lib/**/*.rb'
-    - 'spec/**/*.rb'
-    - 'ee/spec/**/*.rb'
   Exclude:
     - 'ee/db/**/*.rb'
     - 'spec/migrations/**/*.rb'
+    - 'lib/tasks/gitlab/db.rake'
     - 'lib/gitlab/background_migration/**/*.rb'
+    - 'ee/lib/ee/gitlab/background_migration/**/*.rb'
     - 'spec/lib/gitlab/background_migration/**/*.rb'
     - 'spec/lib/gitlab/database/**/*.rb'
 
