--- a/doc/.vale/gitlab/Uppercase.yml
+++ b/doc/.vale/gitlab/Uppercase.yml
@@ -22,6 +22,7 @@ exceptions:
   - ARN
   - ASCII
   - AWS
+  - BMP
   - BSD
   - CAS
   - CDN
@@ -85,6 +86,7 @@ exceptions:
   - IAM
   - IANA
   - IBM
+  - ICO
   - IDE
   - IID
   - IMAP
@@ -200,6 +202,7 @@ exceptions:
   - VCS
   - VPC
   - VPN
+  - WEBP
   - WIP
   - WSL
   - XML
