Track related epics blocked added on usage data
Record blocked epics added on usage ping
and use RedisHLL for data aggregation.

Changelog: added
EE: true

--- a/ee/config/metrics/counts_28d/20210318183733_epics_usage_total_unique_counts_monthly.yml
+++ b/ee/config/metrics/counts_28d/20210318183733_epics_usage_total_unique_counts_monthly.yml
@@ -48,6 +48,7 @@ options:
     - g_project_management_epic_related_removed
     - g_project_management_epic_blocking_added
     - g_project_management_epic_blocking_removed
+    - g_project_management_epic_blocked_added
 distribution:
 - ee
 tier:
