--- a/ee/config/metrics/counts_7d/20210318183220_epics_usage_total_unique_counts_weekly.yml
+++ b/ee/config/metrics/counts_7d/20210318183220_epics_usage_total_unique_counts_weekly.yml
@@ -48,6 +48,7 @@ options:
     - g_project_management_epic_related_removed
     - g_project_management_epic_blocking_added
     - g_project_management_epic_blocking_removed
+    - g_project_management_epic_blocked_added
 distribution:
 - ee
 tier:
