--- a/config/metrics/counts_28d/20210216175548_ci_pipeline_config_auto_devops.yml
+++ b/config/metrics/counts_28d/20210216175548_ci_pipeline_config_auto_devops.yml
@@ -1,7 +1,7 @@
 ---
 data_category: optional
 key_path: usage_activity_by_stage_monthly.verify.ci_pipeline_config_auto_devops
-description: Distinct users that ran an auto DevOps pipeline without a YAML.
+description: Distinct users that ran an auto DevOps pipeline without a .gitlab-ci.yml file.
 product_section: ops
 product_stage: configure
 product_group: group::configure
