Style/SpecialGlobalVars: Use EnforcedStyle: use_perl_names for now

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -95,6 +95,10 @@ Style/FrozenStringLiteralComment:
   Enabled: true
   EnforcedStyle: always_true
 
+Style/SpecialGlobalVars:
+  # https://gitlab.com/gitlab-org/gitlab/-/issues/358427
+  EnforcedStyle: use_perl_names
+
 RSpec/FilePath:
   Exclude:
     - 'qa/**/*'
