Exclude qa:internal in non-qa pipelines
The job runs the QA specs so it's not needed if the pipeline
doesn't include QA changes.

--- a/.gitlab/ci/qa.gitlab-ci.yml
+++ b/.gitlab/ci/qa.gitlab-ci.yml
@@ -16,14 +16,14 @@
 qa:internal:
   extends:
     - .qa-job-base
-    - .qa:rules:ee-and-foss
+    - .qa:rules:internal
   script:
     - bundle exec rspec
 
 qa:internal-as-if-foss:
   extends:
     - qa:internal
-    - .qa:rules:as-if-foss
+    - .qa:rules:internal-as-if-foss
     - .as-if-foss
 
 qa:selectors:
