--- a/config/metrics/counts_28d/20210216184559_ci_templates_total_unique_counts_monthly.yml
+++ b/config/metrics/counts_28d/20210216184559_ci_templates_total_unique_counts_monthly.yml
@@ -168,6 +168,7 @@ options:
   - p_ci_templates_kaniko
   - p_ci_templates_qualys_iac_security
   - p_ci_templates_liquibase
+  - p_ci_templates_matlab
 distribution:
 - ce
 - ee
