--- a/config/metrics/counts_7d/20210216184557_ci_templates_total_unique_counts_weekly.yml
+++ b/config/metrics/counts_7d/20210216184557_ci_templates_total_unique_counts_weekly.yml
@@ -168,6 +168,7 @@ options:
   - p_ci_templates_kaniko
   - p_ci_templates_qualys_iac_security
   - p_ci_templates_liquibase
+  - p_ci_templates_matlab
 distribution:
 - ce
 - ee
