Update a few of the database dictionary docs
A few of the database dictionary docs didn't match the spreadsheet
that was put together to identify group table ownership. These
tables should now be owned by the correct groups.

Relates to https://gitlab.com/gitlab-org/database-team/team-tasks/-/issues/183

--- a/db/docs/ci_build_report_results.yml
+++ b/db/docs/ci_build_report_results.yml
@@ -3,5 +3,5 @@ table_name: ci_build_report_results
 classes:
 - Ci::BuildReportResult
 feature_categories: 
-- continuous_integration
+- code_testing
 description: 
