--- a/db/docs/ci_pipelines_config.yml
+++ b/db/docs/ci_pipelines_config.yml
@@ -3,5 +3,5 @@ table_name: ci_pipelines_config
 classes:
 - Ci::PipelineConfig
 feature_categories: 
-- pipeline_authoring
+- continuous_integration
 description: 
