--- a/db/docs/project_repository_storage_moves.yml
+++ b/db/docs/project_repository_storage_moves.yml
@@ -3,5 +3,5 @@ table_name: project_repository_storage_moves
 classes:
 - Projects::RepositoryStorageMove
 feature_categories:
-- gitaly
+- source_code_management
 description: 
