--- a/db/docs/resource_label_events.yml
+++ b/db/docs/resource_label_events.yml
@@ -3,6 +3,5 @@ table_name: resource_label_events
 classes:
 - ResourceLabelEvent
 feature_categories: 
-- projects
-- subgroups
+- planning_analytics
 description: 
