--- a/db/docs/approval_merge_request_rules_approved_approvers.yml
+++ b/db/docs/approval_merge_request_rules_approved_approvers.yml
@@ -2,5 +2,5 @@
 table_name: approval_merge_request_rules_approved_approvers
 classes: []
 feature_categories: 
-- source_code_management
+- code_review
 description: 
