--- a/db/docs/ci_unit_test_failures.yml
+++ b/db/docs/ci_unit_test_failures.yml
@@ -3,5 +3,5 @@ table_name: ci_unit_test_failures
 classes:
 - Ci::UnitTestFailure
 feature_categories: 
-- continuous_integration
+- code_testing
 description: 
