--- a/db/docs/merge_request_assignees.yml
+++ b/db/docs/merge_request_assignees.yml
@@ -3,5 +3,5 @@ table_name: merge_request_assignees
 classes:
 - MergeRequestAssignee
 feature_categories: 
-- team_planning
+- code_review
 description: 
