--- a/db/docs/namespace_root_storage_statistics.yml
+++ b/db/docs/namespace_root_storage_statistics.yml
@@ -3,5 +3,5 @@ table_name: namespace_root_storage_statistics
 classes:
 - Namespace::RootStorageStatistics
 feature_categories: 
-- subgroups
+- utilization
 description: 
