--- a/db/docs/project_repository_states.yml
+++ b/db/docs/project_repository_states.yml
@@ -3,5 +3,5 @@ table_name: project_repository_states
 classes:
 - ProjectRepositoryState
 feature_categories: 
-- projects
+- source_code_management
 description: 
