--- a/db/docs/resource_iteration_events.yml
+++ b/db/docs/resource_iteration_events.yml
@@ -3,5 +3,5 @@ table_name: resource_iteration_events
 classes:
 - ResourceIterationEvent
 feature_categories: 
-- users
+- planning_analytics
 description: 
