--- a/config/feature_flags/development/deployment_approval_rules.yml
+++ b/config/feature_flags/development/deployment_approval_rules.yml
@@ -5,4 +5,4 @@ rollout_issue_url: https://gitlab.com/gitlab-org/gitlab/-/issues/354726
 milestone: '14.10'
 type: development
 group: group::release
-default_enabled: false
+default_enabled: true
