ci: Validate the experiment that retries failed tests in a new process
Signed-off-by: Rémy Coutable <remy@rymai.me>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,6 +93,7 @@ variables:
   CHECK_PRECOMPILED_ASSETS: "true"
   FF_USE_FASTZIP: "true"
   SKIP_FLAKY_TESTS_AUTOMATICALLY: "true"
+  RETRY_FAILED_TESTS_IN_NEW_PROCESS: "true"
   # Run with decomposed databases by default
   DECOMPOSED_DB: "true"
 
